[package]
name = "ethereum_signer_three"
version = "0.1.0"
edition = "2021"

[dependencies]
k256 = { version = "0.13.4", features = ["digest"] }
rand_core = "0.6"
hex-literal = "0.3"
hex = "0.4"
sha2 = "0.10.8"
sha3 = "0.10.8"
ecdsa = { version = "0.16.9", features = ["digest"] }
generic-array = "0.14.4"
